--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
 	"scripts": {
 		"start": "node index",
 		"server": "nodemon index",
+		"client": "npm start --prefix client ",
+		"dev": "concurrently  \"npm run server\"  \"npm run client\"",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "Yasir Affan",
 	"license": "ISC",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"concurrently": "^5.3.0",
 		"config": "^3.3.2",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
@@ -20,5 +23,6 @@
 		"mongoose": "^5.10.7",
 		"multer": "^1.4.2",
 		"nodemon": "^2.0.4"
-	}
+	},
+	"proxy": "http:localhost:5000"
 }
