--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.10.7",
 		"multer": "^1.4.2",
-		"nodemon": "^2.0.4"
-	},
-	"proxy": "http:localhost:5000"
+		"nodemon": "^2.0.4",
+		"uuid": "^8.3.1"
+	}
 }
