--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "font-awesome": "^4.7.0",
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -40,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-	"proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
